# word_embeddings

./: .gitignore  glove_embeddings.ipynb  pyproject.toml
